[package]
name = "ttportforlioapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
mongodb = "2.1.0"
dotenv = "0.15.0"
clap = { version = "3.1.6", features = ["derive","env"]}
bson = { version = "2.1.0",features = ["chrono-0_4"] }
chrono = { version = "0.4.19" , features = ["serde"] }
futures = "0.3.21"
env_logger = "0.9.0"